[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@proton.me>"]
license = ""
readme = "README.md"
packages = [{ include = "{{ project_name }}" }]

[tool.poetry.dependencies]
python = "^3.10"

Pillow = "^9.3.0"
argon2-cffi = "^21.3.0"

Django = "^4.1.3"
django-environ = "^0.9.0"
django-model-utils = "^4.2.0"
django-allauth = "^0.51.0"
django-render-block = "^0.9.2"
django-extensions = "^3.2.1"
django-improved-user = "2.0a2"
django-anymail = { extras = ["amazon-ses"], version = "^8.6" }

whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
sentry-sdk = "^1.11.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.6.0"
django-debug-toolbar = "^3.7.0"
Werkzeug = { extras = ["watchdog"], version = "^2.2.2" }

pytest = "^7.2.0"
coverage = "^6.5.0"
ipython = "^8.6.0"

black = "^22.10.0"
django-stubs = "^1.13.0"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
pylint-django = "^2.5.3"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.6"
bandit = "^1.7.4"
djlint = "^1.19.7"
ruff = "^0.0.124"
reorder-python-imports = "^3.9.0"

poetryup = "^0.12.3"
poethepoet = "^0.16.4"

[tool.poe.tasks]
run = "python manage.py runserver_plus"
m = "python manage.py migrate"
mk = "python manage.py makemigrations"
cm = { script = "rm_migrations:main" }

# "https://github.com/charliermarsh/ruff"
[tool.ruff]
line-length = 120
select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestylet
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "U", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]

# https://djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
max_line_length = 120
format_attribute_template_tags = true

[tool.pylint.MASTER]
load-plugins = "pylint_django"
django-settings-module = "config.settings"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]

[tool.pylint.TYPECHECK]
generated-members = ["REQUEST", "acl_users", "aq_parent", "[a-zA-Z]+_set{1,2}", "save", "delete"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
