[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@proton.me>"]
license = ""
readme = "README.md"
packages = [{ include = "{{ project_name }}" }]

[tool.poetry.dependencies]
python = "^3.10"

Pillow = "^9.4.0"
argon2-cffi = "^21.3.0"
hiredis = "^2.2.2"
redis = "^4.5.1"

Django = "^4.1.7"
django-environ = "^0.9.0"
django-model-utils = "^4.3.1"
django-allauth = "^0.52.0"
django-render-block = "^0.9.2"
django-extensions = "^3.2.1"
django-improved-user = "2.0a2"
django-htmx = "^1.13.0"
django-anymail = { extras = ["amazon_ses"], version = "^9.0" }

whitenoise = { extras = ["brotli"], version = "^6.3.0" }
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
sentry-sdk = "^1.15.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.6.0"
django-debug-toolbar = "^3.8.1"
django-fastdev = "^1.7.3"
Werkzeug = { extras = ["watchdog"], version = "^2.2.3" }
ipython = "^8.10.0"
pywatchman = "^1.4.1"

coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.6"

mypy = "^1.0.0"
django-stubs = "^1.14.0"
bandit = "^1.7.4"
poethepoet = "^0.18.1"

[tool.poe.tasks]
r = { cmd = "python manage.py runserver --nostatic", help = "Start dev serve" }
u = { cmd = "python manage.py makesuperuser", help = "Create a new superuser using environment varibales, look in your .env.template file" }
m = { cmd = "python manage.py migrate", help = "Apply migrations" }
mk = { cmd = "python manage.py makemigrations", help = "Make migrations" }
rd = { cmd = "python manage.py reset_db --noinput", help = "Delete and recreate your database" }
rm = { cmd = "cuzzy rm-migrations {{ project_name }}", help = "Delete all migrations files" }
RD = ["rd", "rm", "mk", "m"] # Reset your database, delete all migrations files, make news migrations for all apps, apply all migrations

# "https://github.com/charliermarsh/ruff"
[tool.ruff]
line-length = 120
select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestylet
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]
extend-exclude = [
    "*/migrations/*"
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = ["/migrations/"]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
